Added an copy to clipboard button
in title

--- a/quick_qr/public/index.html
+++ b/quick_qr/public/index.html
@@ -38,6 +38,7 @@
       <img id="qrCode" src="" alt="QR Code will appear here">
       <p id="qrData"></p>
       <button id="downloadBtn" style="display:none;">Download QR Code</button>
+      <button id="copyBtn" style="display:none;">Copy QR Code</button>
     </div>
 
     <div class="card history" id="historyCard" style="display: none;">
