Changes to history and display
made it so the user can select their previously created codes

--- a/quick_qr/public/index.html
+++ b/quick_qr/public/index.html
@@ -33,7 +33,7 @@
       <button id="generateBtn">Generate</button>
     </div>
 
-    <div class="card output" id="outputCard" style="display: none;">
+    <div class="card output" id="outputCard">
       <h2>Your Generated QR Code</h2>
       <img id="qrCode" src="" alt="QR Code will appear here">
       <p id="qrData"></p>
