Added a footer section
Added footer and created some CSS to make it look gooood

--- a/quick_qr/public/index.html
+++ b/quick_qr/public/index.html
@@ -359,6 +359,10 @@
     </main>
 
     <div id="statusMessage" class="status-message" role="status" aria-live="polite" aria-atomic="true"></div>
+
+    <footer role="contentinfo">
+      <p>&copy; 2026 RobbinsProductions. All Rights Reserved.</p>
+    </footer>
   </div>
 
   <script src="script.js"></script>
